--- a/sources/Core/Core/Silk.NET.Core.csproj
+++ b/sources/Core/Core/Silk.NET.Core.csproj
@@ -14,8 +14,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fody" Version="6.8.2" PrivateAssets="all" />
-    <PackageReference Include="InlineIL.Fody" Version="1.9.0" PrivateAssets="all" />
+    <PackageReference Include="Fody" PrivateAssets="all" />
+    <PackageReference Include="InlineIL.Fody" PrivateAssets="all" />
+  </ItemGroup>
+
+  <!-- Public API Tracking -->
+  <PropertyGroup>
+    <SilkTrackPublicAPI>true</SilkTrackPublicAPI>
+  </PropertyGroup>
+  <ItemGroup Condition="'$(TargetFramework)' != ''">
+    <AdditionalFiles Include="PublicAPI/$(TargetFramework)/PublicAPI.Shipped.txt" />
+    <AdditionalFiles Include="PublicAPI/$(TargetFramework)/PublicAPI.Unshipped.txt" />
   </ItemGroup>
 
   <!-- Dogfooding -->
