--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -44,5 +44,6 @@ jobs:
           NATIVE_LIBRARY_APPLICABLE_SHORTHANDS: ${{ join(steps.filter.outputs.changes, ' ') }}
           NATIVE_LIBRARY_USER_REFERENCED_SHORTHANDS: ${{ steps.parse.outputs.targets_referenced }}
           PR_EXISTING_NOTICE_ID: ${{ steps.fc.outputs.comment-id }}
+          GH_TOKEN: ${{ github.token }}
     outputs:
-      matrix_strategy: ${{ fromJSON(steps.strat.outputs.matrix_strategy) }}
+      matrix_strategy: ${{ fromJSON(steps.strat.outputs.matrix_strategy || '[]') }}
