--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [opened, edited, synchronize]
 permissions:
-  issues: write
+  pull-requests: write
 env:
   # A space-separated list of paths to native libraries to build.
   NATIVE_LIBRARY_PATHS: "sources/SDL/Native"
@@ -43,7 +43,7 @@ jobs:
         run: ./workflow-stage2.sh
         working-directory: eng/native/buildsystem
         env:
-          NATIVE_LIBRARY_APPLICABLE_SHORTHANDS: ${{ join(steps.filter.outputs.changes, ' ') }}
+          NATIVE_LIBRARY_APPLICABLE_SHORTHANDS: ${{ join(fromJSON(steps.filter.outputs.changes), ' ') }}
           NATIVE_LIBRARY_USER_REFERENCED_SHORTHANDS: ${{ steps.parse.outputs.targets_referenced }}
           PR_EXISTING_NOTICE_ID: ${{ steps.fc.outputs.comment-id }}
       - name: Write a comment if needed.
@@ -54,4 +54,4 @@ jobs:
           issue-number: ${{ github.event.number }}
           body: ${{ steps.strat.outputs.comment_to_write }}
     outputs:
-      matrix_strategy: ${{ fromJSON(steps.strat.outputs.matrix_strategy) }}
+      matrix_strategy: ${{ steps.strat.outputs.matrix_strategy }}
