Start of native build job

--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -56,3 +56,12 @@ jobs:
           edit-mode: replace
     outputs:
       matrix_strategy: ${{ steps.strat.outputs.matrix_strategy }}
+  build:
+    needs: [prerequisites]
+    strategy:
+      matrix: ${{ fromJSON(needs.prerequisites.outputs.matrix_strategy) }}
+    runs-on: ${{ startsWith(matrix.runtime, 'osx') && 'macos-latest' || startsWith(matrix.runtime, 'win') && 'windows-latest' || 'ubuntu-latest' }}
+    steps:
+      - uses: actions/checkout@v3
+      - run: ${{ format('.{0}{1}', startsWith(matrix.runtime, 'win') && '\' || '/', matrix.exec) }}
+        working-directory: ${{ matrix.dir }}
