Attempt to fix matrix

--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -59,9 +59,10 @@ jobs:
   build:
     needs: [prerequisites]
     strategy:
-      matrix: ${{ fromJSON(needs.prerequisites.outputs.matrix_strategy) }}
-    runs-on: ${{ startsWith(matrix.runtime, 'osx') && 'macos-latest' || startsWith(matrix.runtime, 'win') && 'windows-latest' || 'ubuntu-latest' }}
+      matrix:
+        flat: ${{ fromJSON(needs.prerequisites.outputs.matrix_strategy) }}
+    runs-on: ${{ startsWith(matrix.flat.runtime, 'osx') && 'macos-latest' || startsWith(matrix.flat.runtime, 'win') && 'windows-latest' || 'ubuntu-latest' }}
     steps:
       - uses: actions/checkout@v3
-      - run: ${{ format('.{0}{1}', startsWith(matrix.runtime, 'win') && '\' || '/', matrix.exec) }}
-        working-directory: ${{ matrix.dir }}
+      - run: ${{ format('.{0}{1}', startsWith(matrix.flat.runtime, 'win') && '\' || '/', matrix.flat.exec) }}
+        working-directory: ${{ matrix.flat.dir }}
