--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -61,9 +61,15 @@ jobs:
     strategy:
       matrix:
         flat: ${{ fromJSON(needs.prerequisites.outputs.matrix_strategy) }}
-    runs-on: ${{ startsWith(matrix.flat.runtime, 'osx') && 'macos-latest' || startsWith(matrix.flat.runtime, 'win') && 'windows-latest' || 'ubuntu-latest' }}
+    runs-on: ${{ (startsWith(matrix.flat.runtime, 'osx') || startsWith(matrix.flat.runtime, 'ios') || startsWith(matrix.flat.runtime, 'tvos')) && 'macos-latest' || startsWith(matrix.flat.runtime, 'win') && 'windows-latest' || 'ubuntu-latest' }}
     name: ${{ matrix.flat.target }} / ${{ matrix.flat.runtime }}
     steps:
       - uses: actions/checkout@v3
       - run: ${{ format('.{0}{1}', startsWith(matrix.flat.runtime, 'win') && '\' || '/', matrix.flat.exec) }}
         working-directory: ${{ matrix.flat.dir }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: natives-${{ matrix.flat.target }}-${{ matrix.flat.runtime }}
+          path: |
+            ${{ matrix.flat.dir }}/runtimes/${{ matrix.flat.runtime }}/**/*
+            ${{ matrix.flat.dir}}/lib/*${{ matrix.flat.runtime }}*/**/*
