Add Android build for SDL

--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -76,8 +76,9 @@ jobs:
           name: natives-${{ matrix.flat.target }}-${{ matrix.flat.runtime }}
           path: |
             ./.workaround-*.txt
-            ./${{ matrix.flat.dir }}/runtimes/${{ matrix.flat.runtime }}/**/*
-            ./${{ matrix.flat.dir}}/lib/*${{ matrix.flat.runtime }}*/**/*
+            ./${{ matrix.flat.dir }}/runtimes/${{ format('{0}{1}', matrix.flat.runtime, !contains(matrix.flat.runtime, '-') && '*' || '') }}/**/*
+            ./${{ matrix.flat.dir }}/lib/*${{ matrix.flat.runtime }}*/**/*
+            ./${{ matrix.flat.dir }}/*${{ matrix.flat.runtime }}*/**/*
   commit:
     name: Commit Binaries
     needs: [prerequisites, build]
