--- a/sources/Core/Silk.NET/Silk.NET.csproj
+++ b/sources/Core/Silk.NET/Silk.NET.csproj
@@ -6,9 +6,7 @@
         <Nullable>enable</Nullable>
         <SilkDescription>A package that will pull in all non-extension Silk.NET packages for every API.</SilkDescription>
         <SilkExtendedDescription>You probably don't want all that, and it is strongly recommended to pull in only the packages you need instead. This package exists just to simplify project bring-up.</SilkExtendedDescription>
-        <IncludeBuildOutput>false</IncludeBuildOutput>
-        <SilkSourceLinkExempt>true</SilkSourceLinkExempt>
-        <NoWarn>NU5128</NoWarn>
+        <SilkMetapackage>true</SilkMetapackage>
     </PropertyGroup>
 
     <ItemGroup>
