--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -147,11 +147,16 @@
       <IncludeSymbols>true</IncludeSymbols>
       <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
+
     <!-- Non-C# packages (i.e. metapackages, natives) -->
     <PropertyGroup Condition="'$(SilkNativePackage)' == 'true' or '$(SilkMetapackage)' == 'true'">
       <IncludeBuildOutput Condition="'$(SilkNativeHasAndroidJars)' != 'true'">false</IncludeBuildOutput>
-      <NoWarn>NU5128;$(NoWarn)</NoWarn>
+      <IncludeBuildOutput Condition="'$(TargetFramework)' != ''">false</IncludeBuildOutput>
+      <IncludeBuildOutput Condition="'$(SilkNativeHasAndroidJars)' == 'true' and $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">true</IncludeBuildOutput>
+      <NoWarn>NU5128;1591;$(NoWarn)</NoWarn>
+      <GenerateDocumentationFile>false</GenerateDocumentationFile>
     </PropertyGroup>
+
     <!-- Public API -->
     <PropertyGroup Condition="'$(SilkTrackPublicAPI)' != 'true' or '$(TargetFramework)' == ''">
       <SilkTrackPublicAPI>false</SilkTrackPublicAPI>
@@ -159,6 +164,7 @@
     <ItemGroup Condition="'$(SilkTrackPublicAPI)' == 'true'">
       <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="All" />
     </ItemGroup>
+
     <!-- SourceLink -->
     <ItemGroup Condition="'$(SilkSourceLinkExempt)' == '' and '$(SilkNativePackage)' != 'true' and '$(SilkMetapackage)' != 'true'">
       <PackageReference Include="DotNet.ReproducibleBuilds" PrivateAssets="All"/>
@@ -175,6 +181,7 @@
     <WriteLinesToFile File="PublicAPI/$(TargetFramework)/PublicAPI.Unshipped.txt"
                       Lines="@(SilkNewPublicAPILines)"
                       Condition="'$(SilkTrackPublicAPI)' == 'true' and !Exists('PublicAPI/$(TargetFramework)/PublicAPI.Unshipped.txt')" />
+
     <!-- Versioning -->
     <PropertyGroup>
       <SilkChangelog>$([System.IO.File]::ReadAllText("$(MSBuildThisFileDirectory)docs/CHANGELOG.md"))</SilkChangelog>
@@ -185,17 +192,23 @@
       <Output PropertyName="SilkReleaseNotes" TaskParameter="SilkReleaseNotes" />
     </SilkGetVersionInfoTask>
     <PropertyGroup>
+      <SilkOriginalVersionSuffix>$(VersionSuffix)</SilkOriginalVersionSuffix>
       <Version>$(SilkVersion)</Version>
       <VersionSuffix Condition="'$(VersionSuffix)' == ''">$(SilkVersionSuffix)</VersionSuffix>
       <PackageReleaseNotes>$(SilkReleaseNotes)</PackageReleaseNotes>
       <PackageVersion Condition="'$(VersionSuffix)' == ''">$(SilkVersion)</PackageVersion>
       <PackageVersion Condition="'$(VersionSuffix)' != ''">$(SilkVersion)-$(VersionSuffix)</PackageVersion>
     </PropertyGroup>
+
     <!-- Native Packaging -->
     <PropertyGroup>
       <SilkVersionTxtPath>$(MSBuildProjectDirectory)/version.txt</SilkVersionTxtPath>
-      <PackageVersion Condition="Exists('$(SilkVersionTxtPath)')">$([System.IO.File]::ReadAllText("$(SilkVersionTxtPath)"))</PackageVersion>
+      <PackageVersion Condition="Exists('$(SilkVersionTxtPath)')">$([System.IO.File]::ReadAllText("$(SilkVersionTxtPath)").Trim())</PackageVersion>
+      <PackageVersion Condition="'$(SilkOriginalVersionSuffix)' != '' and $(PackageVersion.Contains('-'))">$(PackageVersion)$(SilkOriginalVersionSuffix)</PackageVersion>
+      <PackageVersion Condition="'$(SilkOriginalVersionSuffix)' != '' and !$(PackageVersion.Contains('-'))">$(PackageVersion)-$(SilkOriginalVersionSuffix)</PackageVersion>
     </PropertyGroup>
+    <Error Text="Native packages should have a version.txt file! Read documentation/for-contributors/build-system.md for more info."
+           Condition="'$(SilkNativePackage)' == 'true' and !Exists('$(SilkVersionTxtPath)')" />
     <ItemGroup Condition="'$(SilkNativePackage)' == 'true'">
       <None Include="$(MSBuildProjectDirectory)/runtimes/**/*" Pack="true" PackagePath="runtimes" />
       <!-- bundled in the aar instead -->
@@ -207,6 +220,7 @@
       <AndroidLibrary Include="$(MSBuildProjectDirectory)/android/*.jar" Bind="true" Pack="true" />
       <TransformFile Include="$(MSBuildProjectDirectory)/android/*.xml" />
     </ItemGroup>
+
     <!-- Trimming -->
     <PropertyGroup Condition="'$(SilkTrimmingExempt)' == ''">
       <IsTrimmable>true</IsTrimmable>
