--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,8 @@ jobs:
               with:
                 dotnet-version: '9.0.x'
                 dotnet-quality: 'preview'
+            - name: Install Workloads
+              run: dotnet workload install android macos ios maccatalyst maui tvos
             - name: Pack
               # TODO decide whether we want experimental builds to use Debug or Release - using Release for now...
               run: >-
