Add dependency to native package for SDL

--- a/sources/SDL/SDL/Silk.NET.SDL.csproj
+++ b/sources/SDL/SDL/Silk.NET.SDL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Silk.NET.Core.csproj" />
+    <ProjectReference Include="..\Native\Silk.NET.SDL.Native.csproj" />
   </ItemGroup>
   <Import Project="..\..\Core\Core\Silk.NET.Core.targets" />
 </Project>
