[3.0] Streamline native builds (and build native libs for 3.0) (#2389)
* Initial work on native build workflow

* Stop using YAML for GITHUB_OUTPUT

* Add GH_TOKEN env var to stage2

* Use an action for comment writing instead

* Fix permissions, try to fix expr issue

* Same again

* Fix PR comment location

* Replace the comment rather than append to it

* Start of native build job

* Attempt to fix matrix

* Add a job name, fix build script permissions issues

* Add OSX build for SDL

* Start of commit job

* Add missing checkout

* Use official action to checkout PR

* Fix permissions issues

* Update native binaries for bc824234847be3635913331b0f6fca1c7fc3c982

* Start of linux-x64 SDL build

* Sudo for apt

* apt-get update

* Checkout submodule

* Fix path error

* Update native binaries for ece24590373710ff14b68c30800d7091f1a65d9a

* Add linux-arm and linux-arm64

* Use glibc 2.34 on linux-arm for Y2038 support

* Update native binaries for 3e3df2ca0b8424b3805d53db44fda1ccb976c387

* Add win-arm, win-arm64, win-x64

* Fix dir structure

* Attempt to keep win-arm support, may be on the chopping block though

* Fix batch script error

* Use curl instead of wget?

* Fix winsdk install?

* Remove 32-bit Windows on Arm support

* Use a Microsoft Developer Command Prompt

* Fix vcvarsall path

* Use Ninja - libsdl-org/SDL##11487

* Update native binaries for 601bb669523a67cd2f7650b2df01a3f3c935b10c

* Fix artifact download path

* Fix the fix

* Update native binaries for 4630438977fe234017171daa18258b989c222bff

* Add iOS and tvOS for SDL

* Fix file permissions

* Update native binaries for 45f36d05463ee8dd7462ecb904d519253348f475

* Add Android build for SDL

* Apparently sdkmanager is not in PATH

* Install Python 3.11

* Install Ninja

* Update native binaries for d7d3c696e56cfc8862c3e7ed8f09c3e7b375a7ae

* Try to ungitignore the Android jar

* Update native binaries for f79ad90e3b32074ddf8f22056cea149303f0acb2

* Add an easy update script

* Include org.libs

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -30,6 +30,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
@@ -64,10 +65,12 @@
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <VersionDependsOn>SilkShippingControl;$(VersionDependsOn)</VersionDependsOn>
     <PackageVersionDependsOn>SilkShippingControl;$(PackageVersionDependsOn)</PackageVersionDependsOn>
+    <TargetsForTfmSpecificContentInPackage>SilkNativePackaging;$(TargetsForTfmSpecificContentInPackage)</TargetsForTfmSpecificContentInPackage>
+    <GenerateNuspecDependsOn>SilkShippingControl;$(GenerateNuspecDependsOn)</GenerateNuspecDependsOn>
   </PropertyGroup>
 
   <!-- SourceLink -->
-  <PropertyGroup Condition="'$(SilkSourceLinkExempt)' == ''">
+  <PropertyGroup Condition="'$(SilkSourceLinkExempt)' == '' and '$(SilkNativePackage)' != 'true' and '$(SilkMetapackage)' != 'true'">
     <DebugType>portable</DebugType>
     <EmbedAllSources>true</EmbedAllSources>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
