--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -139,6 +139,15 @@
   </UsingTask>
 
   <Target Name="SilkShippingControl" BeforeTargets="BeforeBuild">
+    <!-- Non-C# packages (i.e. metapackages, natives) -->
+    <PropertyGroup Condition="'$(SilkNativePackage)' == 'true' or '$(SilkMetapackage)' == 'true'">
+      <IncludeBuildOutput Condition="'$(SilkNativeHasAndroidJars)' != 'true'">false</IncludeBuildOutput>
+      <IncludeBuildOutput Condition="'$(TargetFramework)' != ''">false</IncludeBuildOutput>
+      <IncludeBuildOutput Condition="'$(SilkNativeHasAndroidJars)' == 'true' and $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">true</IncludeBuildOutput>
+      <NoWarn>NU5128;1591;$(NoWarn)</NoWarn>
+      <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    </PropertyGroup>
+
     <!-- Public API -->
     <PropertyGroup Condition="'$(SilkTrackPublicAPI)' != 'true' or '$(TargetFramework)' == ''">
       <SilkTrackPublicAPI>false</SilkTrackPublicAPI>
@@ -146,7 +155,9 @@
     <ItemGroup Condition="'$(SilkTrackPublicAPI)' == 'true'">
       <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" PrivateAssets="All" />
     </ItemGroup>
-    <ItemGroup Condition="'$(SilkSourceLinkExempt)' == ''">
+
+    <!-- SourceLink -->
+    <ItemGroup Condition="'$(SilkSourceLinkExempt)' == '' and '$(SilkNativePackage)' != 'true' and '$(SilkMetapackage)' != 'true'">
       <PackageReference Include="DotNet.ReproducibleBuilds" PrivateAssets="All"/>
       <PackageReference Include="DotNet.ReproducibleBuilds.Isolated" PrivateAssets="All"/>
     </ItemGroup>
@@ -161,6 +172,7 @@
     <WriteLinesToFile File="PublicAPI/$(TargetFramework)/PublicAPI.Unshipped.txt"
                       Lines="@(SilkNewPublicAPILines)"
                       Condition="'$(SilkTrackPublicAPI)' == 'true' and !Exists('PublicAPI/$(TargetFramework)/PublicAPI.Unshipped.txt')" />
+
     <!-- Versioning -->
     <PropertyGroup>
       <SilkChangelog>$([System.IO.File]::ReadAllText("$(MSBuildThisFileDirectory)docs/CHANGELOG.md"))</SilkChangelog>
@@ -171,19 +183,81 @@
       <Output PropertyName="SilkReleaseNotes" TaskParameter="SilkReleaseNotes" />
     </SilkGetVersionInfoTask>
     <PropertyGroup>
+      <SilkOriginalVersionSuffix>$(VersionSuffix)</SilkOriginalVersionSuffix>
       <Version>$(SilkVersion)</Version>
       <VersionSuffix Condition="'$(VersionSuffix)' == ''">$(SilkVersionSuffix)</VersionSuffix>
       <PackageReleaseNotes>$(SilkReleaseNotes)</PackageReleaseNotes>
       <PackageVersion Condition="'$(VersionSuffix)' == ''">$(SilkVersion)</PackageVersion>
       <PackageVersion Condition="'$(VersionSuffix)' != ''">$(SilkVersion)-$(VersionSuffix)</PackageVersion>
     </PropertyGroup>
-    <!-- Trimming -->
+
+    <!-- Native Packaging -->
     <PropertyGroup>
-      <IsTrimmable Condition="'$(SilkTrimmingExempt)' == ''">true</IsTrimmable>
-      <EnableTrimAnalyzer Condition="'$(SilkTrimmingExempt)' == ''">true</EnableTrimAnalyzer>
-      <EnableAotAnalyzer Condition="'$(SilkTrimmingExempt)' == ''">true</EnableAotAnalyzer>
-      <EnableSingleFileAnalyzer Condition="'$(SilkTrimmingExempt)' == ''">true</EnableSingleFileAnalyzer>
-      <TrimMode Condition="'$(SilkTrimmingExempt)' == ''">full</TrimMode>
+      <SilkVersionTxtPath>$(MSBuildProjectDirectory)/version.txt</SilkVersionTxtPath>
+      <PackageVersion Condition="Exists('$(SilkVersionTxtPath)')">$([System.IO.File]::ReadAllText("$(SilkVersionTxtPath)").Trim())</PackageVersion>
+      <PackageVersion Condition="'$(SilkOriginalVersionSuffix)' != '' and Exists('$(SilkVersionTxtPath)') and $(PackageVersion.Contains('-'))">$(PackageVersion)$(SilkOriginalVersionSuffix)</PackageVersion>
+      <PackageVersion Condition="'$(SilkOriginalVersionSuffix)' != '' and Exists('$(SilkVersionTxtPath)') and !$(PackageVersion.Contains('-'))">$(PackageVersion)-$(SilkOriginalVersionSuffix)</PackageVersion>
     </PropertyGroup>
+    <Error Text="Native packages should have a version.txt file! Read documentation/for-contributors/build-system.md for more info."
+           Condition="'$(SilkNativePackage)' == 'true' and !Exists('$(SilkVersionTxtPath)')" />
+    <ItemGroup Condition="'$(SilkNativePackage)' == 'true'">
+      <None Include="$(MSBuildProjectDirectory)/runtimes/**/*" Pack="true" PackagePath="runtimes" />
+      <!-- bundled in the aar instead -->
+      <None Remove="$(MSBuildProjectDirectory)/runtimes/android*/**/*" Condition="'$(SilkNativeHasAndroidJars)' == 'true'" />
+    </ItemGroup>
+    <ItemGroup Condition="'$(SilkNativePackage)' == 'true' and $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">
+      <AndroidNativeLibrary Include="$(MSBuildProjectDirectory)/runtimes/android*/native/*.so" />
+      <ProguardConfiguration Include="$(MSBuildProjectDirectory)/android/proguard.txt" Condition="Exists('$(MSBuildProjectDirectory)/android/proguard.txt')" />
+      <AndroidLibrary Include="$(MSBuildProjectDirectory)/android/*.jar" Bind="true" Pack="true" />
+      <TransformFile Include="$(MSBuildProjectDirectory)/android/*.xml" />
+    </ItemGroup>
+
+    <!-- Trimming -->
+    <PropertyGroup Condition="'$(SilkTrimmingExempt)' == ''">
+      <IsTrimmable>true</IsTrimmable>
+      <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+      <EnableAotAnalyzer>true</EnableAotAnalyzer>
+      <EnableSingleFileAnalyzer>true</EnableSingleFileAnalyzer>
+      <TrimMode>full</TrimMode>
+    </PropertyGroup>
+  </Target>
+
+
+  <!-- Closest things to documentation on what the hell this voodoo does:
+       https://github.com/NuGet/Home/issues/10063#issuecomment-713083004
+       https://github.com/xamarin/xamarin-android/pull/5242
+       https://github.com/dotnet/sdk/issues/14042
+       https://github.com/dotnet/sdk/blob/main/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.PackTool.targets#L54
+       https://github.com/xamarin/xamarin-android/issues/5957
+       https://github.com/xamarin/xamarin-android/blob/main/Documentation/guides/OneDotNetEmbeddedResources.md
+
+       This is an adaptation of what we used in Silk.NET 2.X to add files to packages, which was originally focused on
+       Android. For 3.0, we're trying to lean as much as possible on the built-in stuff for e.g. jars as this is in a
+       much better state these days. However, some of the links above may only be relevant with that context. -->
+  <Target Name="SilkNativePackaging" Condition="'$(SilkNativePackage)' == 'true'">
+    <GetNuGetShortFolderName TargetFrameworkMoniker="$(TargetFrameworkMoniker)" TargetPlatformMoniker="$(TargetPlatformMoniker)">
+      <Output TaskParameter="NuGetShortFolderName" PropertyName="SilkNuGetShortFolderName" />
+    </GetNuGetShortFolderName>
+    <ReadLinesFromFile File="$(MSBuildThisFileDirectory)eng/native/nuget/NativeNuGetPackage.targets">
+      <Output TaskParameter="Lines" ItemName="SilkNativeNuGetPackageTargets" />
+    </ReadLinesFromFile>
+    <WriteLinesToFile File="$(IntermediateOutputPath)$(TargetFramework)/$(MSBuildProjectName).targets"
+                      Lines="@(SilkNativeNuGetPackageTargets->'%(Identity)'->Replace('TO_BE_REPLACED_MTOUCH_NATIVE_REFERENCE_LINKER_FLAGS', '$(SilkNativeiOSLinkerFlags)')->Replace('TO_BE_REPLACED_PROPERTY_PREFIX', '$(MSBuildProjectName.Replace('.', '_'))'))" />
+    <WriteLinesToFile File="$(IntermediateOutputPath)$(TargetFramework)/_._" Lines="@(SilkDummyItem)" />
+    <ItemGroup>
+      <TfmSpecificPackageFile Include="$(IntermediateOutputPath)$(TargetFramework)/$(MSBuildProjectName).targets"
+                              Link="build/$(SilkNuGetShortFolderName)/$(MSBuildProjectName).targets"
+                              Pack="true"
+                              PackagePath="build/$(SilkNuGetShortFolderName)/$(MSBuildProjectName).targets" />
+      <TfmSpecificPackageFile Include="$(IntermediateOutputPath)$(TargetFramework)/$(MSBuildProjectName).targets"
+                              Link="build/$(SilkNuGetShortFolderName)/$(MSBuildProjectName).targets"
+                              Pack="true"
+                              PackagePath="buildTransitive/$(SilkNuGetShortFolderName)/$(MSBuildProjectName).targets" />
+      <TfmSpecificPackageFile Include="$(IntermediateOutputPath)$(TargetFramework)/_._"
+                              Link="lib/$(SilkNuGetShortFolderName)/_._"
+                              Pack="true"
+                              PackagePath="lib/$(SilkNuGetShortFolderName)/_._"
+                              Condition="'$(IncludeBuildOutput)' == 'false'" />
+    </ItemGroup>
   </Target>
 </Project>
