--- a/sources/SDL/Native/Silk.NET.SDL.Native.csproj
+++ b/sources/SDL/Native/Silk.NET.SDL.Native.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net8.0-android</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
+    <TargetFrameworks Condition="'$(SilkAndroidDisabled)' != 'true'">$(TargetFrameworks);net8.0-android</TargetFrameworks>
     <SilkDescription>Native binaries for SDL3.</SilkDescription>
     <SilkNativePackage>true</SilkNativePackage>
     <SilkNativeHasAndroidJars>true</SilkNativeHasAndroidJars>
